script js modify
script js updated without defer attibuts

--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Jost:wght@400;500&family=Kanit&display=swap" rel="stylesheet">
     <title>NBApp</title>
-    <script src="/js/script.js" defer></script>
-    <script src="/js/date.js" defer></script>
-    <script src="/js/gameDatas.js" defer></script>
-    <script src="/js/oneGame.js" defer></script>
 </head>
 <body>
     
@@ -82,5 +78,9 @@
 
         </div>
     </main>
+    <script src="/js/script.js" ></script>
+    <script src="/js/date.js" ></script>
+    <script src="/js/gameDatas.js" ></script>
+    <script src="/js/oneGame.js" ></script>
 </body>
 </html>
