script name modify
script.js changed: new name app.js

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <title>NBApp</title>
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Jost:wght@400;500&family=Kanit&display=swap" rel="stylesheet">
-    <title>NBApp</title>
+    <script src="./js/app.js" defer></script>
 </head>
 <body>
     
@@ -78,9 +79,8 @@
 
         </div>
     </main>
-    <script src="/js/script.js" ></script>
-    <script src="/js/date.js" ></script>
-    <script src="/js/gameDatas.js" ></script>
-    <script src="/js/oneGame.js" ></script>
+    <script src="./js/date.js" ></script>
+    <script src="./js/gameDatas.js" ></script>
+    <script src="./js/oneGame.js" ></script>
 </body>
 </html>
