--- a/oneteam.html
+++ b/oneteam.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="oneteam.css">
     <title>NBApp</title>
-    <script src="oneTeam.js" defer></script>
+    <script src="./js/app.js" defer></script>
 </head>
 <body>
     <div class="container">
