add id button and modify date.js

--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
         <div class="dateWrapper">
             <h3 class="gamesMonthAndYear"></h3>
             <div class="dateWrapperButtons">
-                <button type="button" class="eastButton selected off">Conf. Est</button>
-                <button type="button" class="westButton no-selected off">Conf. Ouest</button>
-                <button type="button" class="threeLessButton no-selected off"></button>
-                <button type="button" class="twoLessButton no-selected off"></button>
-                <button type="button" class="oneLessButton no-selected off"></button>
-                <button type="button"  class="todayButton selected off">16<p>auj</p></button>
-                <button type="button" class="oneMoreButton no-selected off"></button>
-                <button type="button" class="twoMoreButton no-selected off"></button>
-                <button type="button" class="threeMoreButton no-selected off"></button>
+                <button type="button" id="dateButton" class="eastButton selected off">Conf. Est</button>
+                <button type="button" id="dateButton" class="westButton no-selected off">Conf. Ouest</button>
+                <button type="button" id="dateButton" class="threeLessButton no-selected off"></button>
+                <button type="button" id="dateButton" class="twoLessButton no-selected off"></button>
+                <button type="button"  id="dateButton" class="oneLessButton no-selected off"></button>
+                <button type="button" id="dateButton"  class="todayButton selected off">16<p>auj</p></button>
+                <button type="button"  id="dateButton" class="oneMoreButton no-selected off"></button>
+                <button type="button" id="dateButton" class="twoMoreButton no-selected off"></button>
+                <button type="button" id="dateButton" class="threeMoreButton no-selected off"></button>
             </div>
             
         </div>
