game table created

--- a/index.html
+++ b/index.html
@@ -76,7 +76,32 @@
             </div>
         </div>
         <div class="third-section">
-
+            <table class ="oneGameTable">
+                <thead class="headGameTable">
+                    <tr class ="headGameCol">
+                        
+                        <th scope="col">TEAM</th>
+                        <th scope="col">POINTS</th>
+                        <th scope="col">TIRS</th>
+                        <th scope="col">3PTS</th>
+                        <th scope="col">LF</th>
+                        <th scope="col">REB OFF</th>
+                        <th scope="col">REB DEF</th>
+                    </tr> 
+                </thead>
+                <tbody class="bodyGameTable">
+                    <tr class="gameElements">
+                        
+                        <th class="">BUCKS</th>
+                        <th class="">112</th>
+                        <th class="">40/88</th>
+                        <th class="">18/47</th>
+                        <th class="">14/18</th>
+                        <th class="">9</th>
+                        <th class="">43</th>
+                    </tr>
+                </tbody>
+            </table>  
         </div>
     </main>
     <script src="./js/date.js" ></script>
