add message for no game

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <button type="button" class="threeLessButton no-selected off"></button>
                 <button type="button" class="twoLessButton no-selected off"></button>
                 <button type="button" class="oneLessButton no-selected off"></button>
-                <button type="button"  class="todayButton selected off">16<p>auj</p></button>
+                <button type="button"  class="todayButton no-selected off">16<p>auj</p></button>
                 <button type="button" class="oneMoreButton no-selected off"></button>
                 <button type="button" class="twoMoreButton no-selected off"></button>
                 <button type="button" class="threeMoreButton no-selected off"></button>
@@ -57,20 +57,6 @@
         </div>
         <div class="second-section off">
             <div class="games">
-                <button type ="button" class="gameCardButton" id="11929">
-                    <div class="homeTeam">
-                            <img class="gameCardImage" src="https://upload.wikimedia.org/wikipedia/fr/thumb/d/d9/Timberwolves_du_Minnesota_logo_2017.png/200px-Timberwolves_du_Minnesota_logo_2017.png"/>
-                            <div class="gameData">
-                                    <p class="homeTeamScore">112</p>
-                            </div>
-                    </div>
-                    <div class="visitorTeam">
-                            <img class="gameCardImage" src="https://upload.wikimedia.org/wikipedia/en/thumb/f/f1/Memphis_Grizzlies.svg/1200px-Memphis_Grizzlies.svg.png"/>
-                            <div class="gameData">
-                                <p class="visitorTeamScore">108</p>
-                            </div>
-                    </div>
-                </button>
             </div>
         </div>
         <div class="third-section off">
