add class on button no-game

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         </div>
         <div class="second-section off">
             <div class="games">
+                <button class="gameCardButton off"><p class="no-game">pas de matchs actuellement...</p></button>
             </div>
         </div>
         <div class="third-section off">
