manage date buttons with selection style

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <button type="button" class="threeLessButton no-selected off"></button>
                 <button type="button" class="twoLessButton no-selected off"></button>
                 <button type="button" class="oneLessButton no-selected off"></button>
-                <button type="button"  class="todayButton no-selected off">16<p>auj</p></button>
+                <button type="button"  class="todayButton no-selected off"><p></p></button>
                 <button type="button" class="oneMoreButton no-selected off"></button>
                 <button type="button" class="twoMoreButton no-selected off"></button>
                 <button type="button" class="threeMoreButton no-selected off"></button>
