--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <script src="./js/app.js" defer></script>
 </head>
 <body>
+        <div class="loader-container">
+            <div class="loader"></div>
+        </div>
         <nav class="navbar">
             <img class="nba-logo" src="./images/nbapp-logo.png">
             <ul class="navbar__links">
