--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Jost:wght@400;500&family=Kanit&display=swap" rel="stylesheet">
     <script src="./js/app.js" defer></script>
+    <script src="./js/loader.js" defer></script>
 </head>
 <body>
         <div class="loader-container">
             <div class="loader"></div>
+            <p>Chargement des données...</p>
         </div>
         <nav class="navbar">
             <img class="nba-logo" src="./images/nbapp-logo.png">
