--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 
                 <button type="button" class="eastButton selected off">Conf. Est</button>
                 <button type="button" class="westButton no-selected off">Conf. Ouest</button>
-                <button type="button" class="threeLessButton no-selected off"></button>
-                <button type="button" class="twoLessButton no-selected off"></button>
-                <button type="button" class="oneLessButton no-selected off"></button>
-                <button type="button"  class="todayButton no-selected off"><p></p></button>
-                <button type="button" class="oneMoreButton no-selected off"></button>
-                <button type="button" class="twoMoreButton no-selected off"></button>
-                <button type="button" class="threeMoreButton no-selected off"></button>
+                <button type="button" id="threeLessButton" class="dateButton no-selected off"></button>
+                <button type="button" id="twoLessButton" class="dateButton no-selected off"></button>
+                <button type="button" id="oneLessButton" class="dateButton no-selected off"></button>
+                <button type="button"  id="todayButton" class="dateButton no-selected off"><p>55</p></button>
+                <button type="button" id="oneMoreButton" class="dateButton no-selected off"></button>
+                <button type="button" id="twoMoreButton" class="dateButton no-selected off"></button>
+                <button type="button" id="threeMoreButton" class="dateButton no-selected off"></button>
 
             </div>
             
@@ -91,6 +91,7 @@
     </main>
     <script src="./js/date.js" ></script>
     <script src="./js/oneGame.js" ></script>
-    
+    <script src="./js/oneDate.js" ></script>
+
 </body>
 </html>
