games with date, date as variable, but no css on head buttons

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <button type="button" id="threeLessButton" class="dateButton no-selected off"></button>
                 <button type="button" id="twoLessButton" class="dateButton no-selected off"></button>
                 <button type="button" id="oneLessButton" class="dateButton no-selected off"></button>
-                <button type="button"  id="todayButton" class="dateButton no-selected off"><p>55</p></button>
+                <button type="button"  id="todayButton" class="dateButton selected off"><p>55</p></button>
                 <button type="button" id="oneMoreButton" class="dateButton no-selected off"></button>
                 <button type="button" id="twoMoreButton" class="dateButton no-selected off"></button>
                 <button type="button" id="threeMoreButton" class="dateButton no-selected off"></button>
@@ -91,7 +91,7 @@
     </main>
     <script src="./js/date.js" ></script>
     <script src="./js/oneGame.js" ></script>
-    <script src="./js/oneDate.js" ></script>
+    
 
 </body>
 </html>
