--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <tr class ="headCol">
                         <th scope="col"></th>
                         <th scope="col"></th>
-                        <th scope="col">TEAM</th>
+                        <th scope="col">EQUIPE</th>
                         <th scope="col">V</th>
                         <th scope="col">D</th>
                         <th scope="col">%V</th>
@@ -64,6 +64,21 @@
         </div>
         <div class="second-section off">
             <div class="games">
+                <button class="gameCardButton" id="11968">
+                    <div class="homeTeam CHA">
+                        <img class="gameCardImageHome" src="https://upload.wikimedia.org/wikipedia/fr/thumb/f/f3/Hornets_de_Charlotte_logo.svg/1200px-Hornets_de_Charlotte_logo.svg.png">
+                        <div class="gameData">
+                            <p class="homeTeamScore"></p>
+                        </div>
+                    </div>
+                    <div class="gameHour"><p>1:30</p></div>   
+                    <div class="visitorTeam DET">
+                        <img class="gameCardImageVisitor" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/Detroit_Pistons_primary_logo_2017.png/150px-Detroit_Pistons_primary_logo_2017.png">
+                        <div class="gameData">
+                            <p class="visitorTeamScore"></p>
+                        </div>
+                    </div>
+                </button>
             </div>
         </div>
         <div class="third-section off">
