date and hour done

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
         <div class="second-section off">
             <div class="games">
-                <button class="gameCardButton" id="11968">
+                <button class="gameCardButton off" id="11968">
                     <div class="homeTeam CHA">
                         <img class="gameCardImageHome" src="https://upload.wikimedia.org/wikipedia/fr/thumb/f/f3/Hornets_de_Charlotte_logo.svg/1200px-Hornets_de_Charlotte_logo.svg.png">
                         <div class="gameData">
