creation of the forth section

--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
                 </table>
             </div>    
         </div>
+        <div class="forth-section">
+            
+        </div>
     </main>
     <script src="./js/date.js" ></script>
     <script src="./js/oneGame.js" ></script>
