--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                 <button type="button" class="westButton no-selected off">Conf. Ouest</button>
                 <button type="button" id="threeLessButton" class="dateButton no-selected off"></button>
                 <button type="button" id="twoLessButton" class="dateButton no-selected off"></button>
-                <button type="button" id="oneLessButton" class="dateButton no-selected off"></button>
+                <button type="button" id="oneLessButton" class="dateButton no-selected"></button>
                 <button type="button"  id="todayButton" class="dateButton selected off"><p>55</p></button>
                 <button type="button" id="oneMoreButton" class="dateButton no-selected off"></button>
-                <button type="button" id="twoMoreButton" class="dateButton no-selected off"></button>
+                <button type="button" id="twoMoreButton" class="dateButton no-selected"></button>
                 <button type="button" id="threeMoreButton" class="dateButton no-selected off"></button>
 
             </div>
