fetch with dates and lunch boxscores when start ok

--- a/index.html
+++ b/index.html
@@ -104,7 +104,10 @@
             </div>    
         </div>
         <div class="forth-section">
-            
+            <div class="forth-section__container">
+                <p>Bienvenue sur NBApp</p>
+                
+            </div>    
         </div>
     </main>
     <script src="./js/date.js" ></script>
