changed on css teamcard

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             
         </div>
     <main>       
-        <div class="first-section off">
+        <div class="first-section">
             <table class ="standingsTable">
                 <thead class="headTable">
                     <tr class ="headCol">
@@ -58,7 +58,30 @@
                     </tr> 
                 </thead>
                 <tbody class="bodyTable">
-                    <tr class="cardElements"></tr>
+                    <tr class="cardElements">
+                        <th class="cardRank">1</th>
+                        <th class="cardImageTh"><img class="cardImage" src="https://upload.wikimedia.org/wikipedia/fr/3/34/Bucks2015.png"></th>
+                        <th class="cardName">Milwaukee Bucks</th>
+                        <th class="cardWin">44</th>
+                        <th class="cardLost">17</th>
+                        <th class="cardPercentage">0.721</th>
+                    </tr>
+                    <tr class="cardElements">
+                        <th class="cardRank">2</th>
+                        <th class="cardImageTh"><img class="cardImage" src="https://upload.wikimedia.org/wikipedia/fr/3/34/Bucks2015.png"></th>
+                        <th class="cardName">Boston Celtics</th>
+                        <th class="cardWin">44</th>
+                        <th class="cardLost">18</th>
+                        <th class="cardPercentage">0.710</th>
+                    </tr>
+                    <tr class="cardElements">
+                        <th class="cardRank">3</th>
+                        <th class="cardImageTh"><img class="cardImage" src="https://upload.wikimedia.org/wikipedia/fr/3/34/Bucks2015.png"></th>
+                        <th class="cardName">Philadelphia 76ers</th>
+                        <th class="cardWin">39</th>
+                        <th class="cardLost">21</th>
+                        <th class="cardPercentage">0.650</th>
+                    </tr>
                 </tbody>
             </table>    
         </div>
@@ -104,9 +127,14 @@
             </div>    
         </div>
         <div class="forth-section">
-            <div class="forth-section__container">
-                <p>Bienvenue sur NBApp</p>
-                
+            <div class="forth-section__container MIL">
+                <div class="teamSelected">
+                    <p class="teamSelected__name">Milwaukee Bucks</p>
+                    <p class="teamSelected__rank">#1 dans la Conférence Est</p>
+                    <p class="teamSelected__win">44v</p>
+                    <p class="teamSelected__loss">17d</p>
+                </div>
+
             </div>    
         </div>
     </main>
