--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Jost:wght@400;500&family=Kanit&display=swap" rel="stylesheet">
     <script src="./js/app.js" defer></script>
     <script src="./js/loader.js" defer></script>
+    <link rel="shortcut icon" type="image/x-icon" href="../images/icone.png">
 </head>
 <body>
         <div class="loader-container">
