game_look_changed

--- a/index.html
+++ b/index.html
@@ -88,14 +88,37 @@
                 </tbody>
             </table>    
         </div>
-        <div class="second-section off">
+        <div class="second-section">
             <div class="games">
-                <button class="gameCardButton off" id="">
-                    
+                <button class="gameCardButton" id="12822">
+                    <div class ="visitorTeam">
+                        <div class="gameData">
+                            <p class="visitorTeamName">Bucks</p>
+                            <p class="visitorTeamScore">125</p>
+                        </div>
+                    </div>    
+                    <div class ="homeTeam">
+                        <div class="gameData">
+                            <p class="homeTeamName">Heat</p>
+                            <p class="homeTeamScore">130</p>
+                        </div>
+                    </div>
+                </button>
+                <button class="gameCardButton" id="12822">
+                    <div class ="visitorTeam PHI">
+                        <div class="gameData">
+                            <p class="visitorTeamScore">125</p>
+                        </div>
+                    </div>    
+                    <div class ="homeTeam MIL">
+                        <div class="gameData">
+                            <p class="homeTeamScore">130</p>
+                        </div>
+                    </div>
                 </button>
             </div>
         </div>
-        <div class="third-section">
+        <div class="third-section off">
             <div class="gameContainer">
                  
                 <table class ="gameTable">
