new_boxscore_button

--- a/index.html
+++ b/index.html
@@ -105,6 +105,51 @@
                     </div>
                     <button class="boxScore">Box Score</button>
                 </div>
+                <div class="gameCardButton" id="">
+                    <div class="gameCardTeams">
+                        <div class ="visitorTeam UTA">
+                         <div class="gameData">
+                                <p class="visitorTeamScore">125</p>
+                            </div>
+                        </div>    
+                        <div class ="homeTeam NYK">
+                            <div class="gameData">
+                                <p class="homeTeamScore">130</p>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="boxScore">Box Score</button>
+                </div>
+                <div class="gameCardButton" id="">
+                    <div class="gameCardTeams">
+                        <div class ="visitorTeam UTA">
+                         <div class="gameData">
+                                <p class="visitorTeamScore">125</p>
+                            </div>
+                        </div>    
+                        <div class ="homeTeam NYK">
+                            <div class="gameData">
+                                <p class="homeTeamScore">130</p>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="boxScore">Box Score</button>
+                </div>
+                <div class="gameCardButton" id="">
+                    <div class="gameCardTeams">
+                        <div class ="visitorTeam UTA">
+                         <div class="gameData">
+                                <p class="visitorTeamScore">125</p>
+                            </div>
+                        </div>    
+                        <div class ="homeTeam NYK">
+                            <div class="gameData">
+                                <p class="homeTeamScore">130</p>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="boxScore">Box Score</button>
+                </div>
             </div>
         </div>
         <div class="third-section">
