--- a/index.html
+++ b/index.html
@@ -93,17 +93,20 @@
                 <div class="gameCardButton" id="">
                     <div class="gameCardTeams">
                         <div class ="visitorTeam UTA">
-                         <div class="gameData">
+                            <div class="gameData">
                                 <p class="visitorTeamScore">125</p>
+                                <p class="visitorTeamNickname">Jazz</p>
                             </div>
                         </div>    
                         <div class ="homeTeam NYK">
                             <div class="gameData">
                                 <p class="homeTeamScore">130</p>
+                                <p class="homeTeamNickname">Knicks</p>
                             </div>
                         </div>
+                        <button class="boxScore">Box Score</button>  
                     </div>
-                    <button class="boxScore">Box Score</button>
+                    
                 </div>
                 <div class="gameCardButton" id="">
                     <div class="gameCardTeams">
