games_cards_design_ok

--- a/index.html
+++ b/index.html
@@ -90,68 +90,91 @@
         </div>
         <div class="second-section">
             <div class="games">
+               
                 <div class="gameCardButton" id="">
                     <div class="gameCardTeams">
-                        <div class ="visitorTeam UTA">
+                        <div class ="visitorTeam MIA">
                             <div class="gameData">
                                 <p class="visitorTeamScore">125</p>
-                                <p class="visitorTeamNickname">Jazz</p>
+                                <p class="visitorTeamNickname">Heat</p>
                             </div>
                         </div>    
-                        <div class ="homeTeam NYK">
+                        <div class ="homeTeam MIN">
                             <div class="gameData">
                                 <p class="homeTeamScore">130</p>
-                                <p class="homeTeamNickname">Knicks</p>
+                                <p class="homeTeamNickname">Timberwolves</p>
                             </div>
                         </div>
                         <button class="boxScore">Box Score</button>  
                     </div>
-                    
                 </div>
                 <div class="gameCardButton" id="">
                     <div class="gameCardTeams">
-                        <div class ="visitorTeam UTA">
-                         <div class="gameData">
+                        <div class ="visitorTeam MIA">
+                            <div class="gameData">
                                 <p class="visitorTeamScore">125</p>
+                                <p class="visitorTeamNickname">Heat</p>
                             </div>
                         </div>    
-                        <div class ="homeTeam NYK">
+                        <div class ="homeTeam MIN">
                             <div class="gameData">
                                 <p class="homeTeamScore">130</p>
+                                <p class="homeTeamNickname">Timberwolves</p>
                             </div>
                         </div>
+                        <button class="boxScore">Box Score</button>  
                     </div>
-                    <button class="boxScore">Box Score</button>
                 </div>
                 <div class="gameCardButton" id="">
                     <div class="gameCardTeams">
-                        <div class ="visitorTeam UTA">
-                         <div class="gameData">
+                        <div class ="visitorTeam MIA">
+                            <div class="gameData">
                                 <p class="visitorTeamScore">125</p>
+                                <p class="visitorTeamNickname">Heat</p>
                             </div>
                         </div>    
-                        <div class ="homeTeam NYK">
+                        <div class ="homeTeam MIN">
                             <div class="gameData">
                                 <p class="homeTeamScore">130</p>
+                                <p class="homeTeamNickname">Timberwolves</p>
                             </div>
                         </div>
+                        <button class="boxScore">Box Score</button>  
                     </div>
-                    <button class="boxScore">Box Score</button>
                 </div>
                 <div class="gameCardButton" id="">
                     <div class="gameCardTeams">
-                        <div class ="visitorTeam UTA">
-                         <div class="gameData">
+                        <div class ="visitorTeam MIA">
+                            <div class="gameData">
                                 <p class="visitorTeamScore">125</p>
+                                <p class="visitorTeamNickname">Heat</p>
                             </div>
                         </div>    
-                        <div class ="homeTeam NYK">
+                        <div class ="homeTeam MIN">
                             <div class="gameData">
                                 <p class="homeTeamScore">130</p>
+                                <p class="homeTeamNickname">Timberwolves</p>
                             </div>
                         </div>
+                        <button class="boxScore">Box Score</button>  
                     </div>
-                    <button class="boxScore">Box Score</button>
+                </div>
+                <div class="gameCardButton" id="">
+                    <div class="gameCardTeams">
+                        <div class ="visitorTeam MIA">
+                            <div class="gameData">
+                                <p class="visitorTeamScore">125</p>
+                                <p class="visitorTeamNickname">Heat</p>
+                            </div>
+                        </div>    
+                        <div class ="homeTeam MIN">
+                            <div class="gameData">
+                                <p class="homeTeamScore">130</p>
+                                <p class="homeTeamNickname">Timberwolves</p>
+                            </div>
+                        </div>
+                        <button class="boxScore">Box Score</button>  
+                    </div>
                 </div>
             </div>
         </div>
