games_scores_nickname_done

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <tr class="cardElements">
                         <th class="cardRank">1</th>
                         <th class="cardImageTh"><img class="cardImage" src="https://upload.wikimedia.org/wikipedia/fr/3/34/Bucks2015.png"></th>
-                        <th class="cardName" id="21">Milwaukee Bucks</th>
+                        <th class="cardName" id="21">Bucks</th>
                         <th class="cardWin">44</th>
                         <th class="cardLost">17</th>
                         <th class="cardPercentage">0.721</th>
@@ -72,7 +72,7 @@
                     <tr class="cardElements">
                         <th class="cardRank">2</th>
                         <th class="cardImageTh"><img class="cardImage" src="https://upload.wikimedia.org/wikipedia/fr/3/34/Bucks2015.png"></th>
-                        <th class="cardName" id="2">Boston Celtics</th>
+                        <th class="cardName" id="2">Timberwolves</th>
                         <th class="cardWin">44</th>
                         <th class="cardLost">18</th>
                         <th class="cardPercentage">0.710</th>
@@ -80,7 +80,103 @@
                     <tr class="cardElements">
                         <th class="cardRank">3</th>
                         <th class="cardImageTh"><img class="cardImage" src="https://upload.wikimedia.org/wikipedia/fr/3/34/Bucks2015.png"></th>
-                        <th class="cardName" id="27">Philadelphia 76ers</th>
+                        <th class="cardName" id="27">76ers</th>
+                        <th class="cardWin">39</th>
+                        <th class="cardLost">21</th>
+                        <th class="cardPercentage">0.650</th>
+                    </tr>
+                    <tr class="cardElements">
+                        <th class="cardRank">3</th>
+                        <th class="cardImageTh"><img class="cardImage" src="https://upload.wikimedia.org/wikipedia/fr/3/34/Bucks2015.png"></th>
+                        <th class="cardName" id="27">76ers</th>
+                        <th class="cardWin">39</th>
+                        <th class="cardLost">21</th>
+                        <th class="cardPercentage">0.650</th>
+                    </tr>
+                    <tr class="cardElements">
+                        <th class="cardRank">3</th>
+                        <th class="cardImageTh"><img class="cardImage" src="https://upload.wikimedia.org/wikipedia/fr/3/34/Bucks2015.png"></th>
+                        <th class="cardName" id="27">76ers</th>
+                        <th class="cardWin">39</th>
+                        <th class="cardLost">21</th>
+                        <th class="cardPercentage">0.650</th>
+                    </tr>
+                    <tr class="cardElements">
+                        <th class="cardRank">3</th>
+                        <th class="cardImageTh"><img class="cardImage" src="https://upload.wikimedia.org/wikipedia/fr/3/34/Bucks2015.png"></th>
+                        <th class="cardName" id="27">76ers</th>
+                        <th class="cardWin">39</th>
+                        <th class="cardLost">21</th>
+                        <th class="cardPercentage">0.650</th>
+                    </tr>
+                    <tr class="cardElements">
+                        <th class="cardRank">3</th>
+                        <th class="cardImageTh"><img class="cardImage" src="https://upload.wikimedia.org/wikipedia/fr/3/34/Bucks2015.png"></th>
+                        <th class="cardName" id="27">76ers</th>
+                        <th class="cardWin">39</th>
+                        <th class="cardLost">21</th>
+                        <th class="cardPercentage">0.650</th>
+                    </tr>
+                    <tr class="cardElements">
+                        <th class="cardRank">3</th>
+                        <th class="cardImageTh"><img class="cardImage" src="https://upload.wikimedia.org/wikipedia/fr/3/34/Bucks2015.png"></th>
+                        <th class="cardName" id="27">76ers</th>
+                        <th class="cardWin">39</th>
+                        <th class="cardLost">21</th>
+                        <th class="cardPercentage">0.650</th>
+                    </tr>
+                    <tr class="cardElements">
+                        <th class="cardRank">3</th>
+                        <th class="cardImageTh"><img class="cardImage" src="https://upload.wikimedia.org/wikipedia/fr/3/34/Bucks2015.png"></th>
+                        <th class="cardName" id="27">76ers</th>
+                        <th class="cardWin">39</th>
+                        <th class="cardLost">21</th>
+                        <th class="cardPercentage">0.650</th>
+                    </tr>
+                    <tr class="cardElements">
+                        <th class="cardRank">3</th>
+                        <th class="cardImageTh"><img class="cardImage" src="https://upload.wikimedia.org/wikipedia/fr/3/34/Bucks2015.png"></th>
+                        <th class="cardName" id="27">76ers</th>
+                        <th class="cardWin">39</th>
+                        <th class="cardLost">21</th>
+                        <th class="cardPercentage">0.650</th>
+                    </tr>
+                    <tr class="cardElements">
+                        <th class="cardRank">3</th>
+                        <th class="cardImageTh"><img class="cardImage" src="https://upload.wikimedia.org/wikipedia/fr/3/34/Bucks2015.png"></th>
+                        <th class="cardName" id="27">76ers</th>
+                        <th class="cardWin">39</th>
+                        <th class="cardLost">21</th>
+                        <th class="cardPercentage">0.650</th>
+                    </tr>
+                    <tr class="cardElements">
+                        <th class="cardRank">3</th>
+                        <th class="cardImageTh"><img class="cardImage" src="https://upload.wikimedia.org/wikipedia/fr/3/34/Bucks2015.png"></th>
+                        <th class="cardName" id="27">76ers</th>
+                        <th class="cardWin">39</th>
+                        <th class="cardLost">21</th>
+                        <th class="cardPercentage">0.650</th>
+                    </tr>
+                    <tr class="cardElements">
+                        <th class="cardRank">3</th>
+                        <th class="cardImageTh"><img class="cardImage" src="https://upload.wikimedia.org/wikipedia/fr/3/34/Bucks2015.png"></th>
+                        <th class="cardName" id="27">76ers</th>
+                        <th class="cardWin">39</th>
+                        <th class="cardLost">21</th>
+                        <th class="cardPercentage">0.650</th>
+                    </tr>
+                    <tr class="cardElements">
+                        <th class="cardRank">3</th>
+                        <th class="cardImageTh"><img class="cardImage" src="https://upload.wikimedia.org/wikipedia/fr/3/34/Bucks2015.png"></th>
+                        <th class="cardName" id="27">76ers</th>
+                        <th class="cardWin">39</th>
+                        <th class="cardLost">21</th>
+                        <th class="cardPercentage">0.650</th>
+                    </tr>
+                    <tr class="cardElements">
+                        <th class="cardRank">3</th>
+                        <th class="cardImageTh"><img class="cardImage" src="https://upload.wikimedia.org/wikipedia/fr/3/34/Bucks2015.png"></th>
+                        <th class="cardName" id="27">76ers</th>
                         <th class="cardWin">39</th>
                         <th class="cardLost">21</th>
                         <th class="cardPercentage">0.650</th>
@@ -88,7 +184,7 @@
                 </tbody>
             </table>    
         </div>
-        <div class="second-section">
+        <div class="second-section off">
             <div class="games">
                
                 <div class="gameCardButton" id="">
@@ -178,7 +274,7 @@
                 </div>
             </div>
         </div>
-        <div class="third-section">
+        <div class="third-section off">
             <div class="gameContainer">
                 <table class ="gameTable">
                     <thead class="headGameTable">
