css_loader_class_changed

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                 <thead class="headTable">
                     <tr class ="headCol">
                         <th scope="col"></th>
+                        <th scope="col">EQUIPES</th>
                         <th scope="col"></th>
-                        <th scope="col">EQUIPE</th>
                         <th scope="col">V</th>
                         <th scope="col">D</th>
                         <th scope="col">%V</th>
