changed_css_section_class

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                 </div>
             </div>
         </div>
-        <div class="third-section off">
+        <div class="third-section">
             <div class="gameContainer">
                 <table class ="gameTable">
                     <thead class="headGameTable">
@@ -299,6 +299,27 @@
                             <th class="playerPoints">12</th>
                             <th class="playerRbd">13</th>
                             <th class="playerAst">14</th>
+                        </tr>
+                        <tr class ="gameElements">
+                            <th class="playerLogo OKC"></th>
+                            <th class="playerName">Shai Gilgeous-Alexander</th>
+                            <th class="playerPoints">45</th>
+                            <th class="playerRbd">9</th>
+                            <th class="playerAst">3</th>
+                        </tr>
+                        <tr class ="gameElements">
+                            <th class="playerLogo OKC"></th>
+                            <th class="playerName">Shai Gilgeous-Alexander</th>
+                            <th class="playerPoints">45</th>
+                            <th class="playerRbd">9</th>
+                            <th class="playerAst">3</th>
+                        </tr>
+                        <tr class ="gameElements">
+                            <th class="playerLogo OKC"></th>
+                            <th class="playerName">Shai Gilgeous-Alexander</th>
+                            <th class="playerPoints">45</th>
+                            <th class="playerRbd">9</th>
+                            <th class="playerAst">3</th>
                         </tr>
                         <tr class ="gameElements">
                             <th class="playerLogo OKC"></th>
