--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <p>Chargement des données...</p>
         </div>
         <div class="logoHead">
+            <img class="nba-logo" src="./images/nbapp-logo.png">
             <p class ="matchsTitle off">Matchs</p>
             <p class ="standingsTitle off">Classements</p>
         </div>
