--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="logoHead">
             <img class="nba-logo" src="./images/nbapp-logo.png">
-            <p class ="matchsTitle off">Matchs</p>
+            <p class ="matchsTitle">Matchs</p>
             <p class ="standingsTitle off">Classements</p>
         </div>
         <div class="menuBar">
